--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,8 +5,11 @@ services:
     build: .
     ports:
       - 3000:3000
-    volumes:
-      - .:/home/node/app
+      - 5555:5555
+    extra_hosts:
+      - "host.docker.internal:172.17.0.1"
+    depends_on:
+      - db
   db:
     image: bitnami/mongodb:5.0.17
     volumes:
@@ -16,6 +19,8 @@ services:
       MONGODB_REPLICA_SET_MODE: primary
       MONGODB_REPLICA_SET_KEY: 123456
       MONGODB_DATABASE: nest
+    ports:
+      - 27017:27017
 
 volumes:
   mongodb_data:
