--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -11,17 +11,21 @@ services:
     depends_on:
       - db
   db:
-    image: bitnami/mongodb:5.0.17
-    volumes:
-      - mongodb_data:/bitnami/mongodb
+    # instead of using image bitnami/mongodb:5.0.17 (it's not working), this image builds a replicaset in its own Dockerfile
+    build: ./mongo_rs
+    #image: bitnami/mongodb:5.0.17
+    #image: mongo:5.0.17
+    #command: mongod --replSet my-mongo-set
+    restart: always
     environment:
-      MONGODB_ROOT_PASSWORD: root
-      MONGODB_REPLICA_SET_MODE: primary
-      MONGODB_REPLICA_SET_KEY: 123456
+      MONGO_INITDB_ROOT_PASSWORD: root
+      MONGO_REPLICA_HOST: db
+      # MONGODB_REPLICA_SET_MODE: primary
+      # MONGODB_REPLICA_SET_KEY: 123456
       MONGODB_DATABASE: nest
-    ports:
-      - 27017:27017
+    # volumes:
+    #   - mongodb_data:/bitnami/mongodb
 
-volumes:
-  mongodb_data:
-    driver: local
+# volumes:
+#   data_mongo:
+#     driver: local
